package at.cgsit.train.productimport.model;

import java.math.BigDecimal;
import java.time.Instant;

/**
 * Domain-Objekt für einen Produkt-Datensatz.
 */
public class Product {

    private long id;
    private String name;
    private BigDecimal price;
    private boolean active;
    private Instant createdAt;

    public Product() {
    }

    public Product(long id, String name, BigDecimal price, boolean active, Instant createdAt) {
        this.id = id;
        this.name = name;
        this.price = price;
        this.active = active;
        this.createdAt = createdAt;
    }

    public long getId() {
        return id;
    }

    public Product setId(long id) {
        this.id = id;
        return this;
    }

    public String getName() {
        return name;
    }

    public Product setName(String name) {
        this.name = name;
        return this;
    }

    public BigDecimal getPrice() {
        return price;
    }

    public Product setPrice(BigDecimal price) {
        this.price = price;
        return this;
    }

    public boolean isActive() {
        return active;
    }

    public Product setActive(boolean active) {
        this.active = active;
        return this;
    }

    public Instant getCreatedAt() {
        return createdAt;
    }

    public Product setCreatedAt(Instant createdAt) {
        this.createdAt = createdAt;
        return this;
    }

    @Override
    public String toString() {
        return "Product{" +
               "id=" + id +
               ", name='" + name + '\'' +
               ", price=" + price +
               ", active=" + active +
               ", createdAt=" + createdAt +
               '}';
    }
}
